deployment/auth_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-pod
  template:
    metadata:
      name: authentication-pod
      labels:
        app: authentication-pod
    spec:
      containers:
        - name: go-auth
          image: hirasakavizu/go_authentication:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: authentication-pod
  ports:
    - port: 8000
      targetPort: 8000
