deployment/postgre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-deployment
spec:
  selector:
    matchLabels:
      app: postgres-pod
  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    app: postgres-pod
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-public-svc
spec:
  type: LoadBalancer
  selector:
    app: postgres-pod
  ports:
    - port: 5433
      targetPort: 5432
