deployment/user_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service-pod
  template:
    metadata:
      name: user-service-pod
      labels: 
        app: user-service-pod
    spec:
      containers:
        - name: go-user-service
          image: hirasakavizu/go_user_service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
spec:
  selector:
    app: user-service-pod
  ports:
    - port: 8080
      targetPort: 8080
